--- a/components/layers/Layer.module.scss
+++ b/components/layers/Layer.module.scss
@@ -2,30 +2,34 @@
   position: relative;
   min-height: auto;
   padding: 4rem 2rem;
-  padding-top: 6rem;
+  padding-top: 10rem;
   overflow: hidden;
   
   /* Responsive top padding for different screen sizes */
   @media (min-width: 2560px) {
-    padding-top: 8rem;
+    padding-top: 15rem;
   }
   
-  @media (min-width: 1024px) and (max-width: 2559px) {
-    padding-top: 6rem;
+  @media (min-width: 1440px) and (max-width: 2559px) {
+    padding-top: 12rem;
+  }
+  
+  @media (min-width: 1024px) and (max-width: 1439px) {
+    padding-top: 10rem;
   }
   
   @media (min-width: 768px) and (max-width: 1023px) {
-    padding-top: 5rem;
+    padding-top: 8rem;
   }
   
   @media (max-width: 767px) {
     padding: 4rem 1.5rem;
-    padding-top: 4rem;
+    padding-top: 6rem;
   }
   
   @media (max-width: 375px) {
     padding: 3rem 1rem;
-    padding-top: 3rem;
+    padding-top: 5rem;
   }
 
   &[data-layer="0"] {
